# webv2

./: .gitignore  CMakeLists.txt  README.md  Readme.md  bytes_buffer.hpp  callback.hpp  chat_server.cpp  enum_magic.hpp  expected.hpp  file_utils.hpp  http_codec.hpp  http_server.hpp  io_context.hpp  reflect.hpp  stop_source.hpp  test_server.cpp  timer_context.hpp
include/buffer/: buffer.h
include/epoller/: epoller.h
include/http/: http.h  httprequest.h  httpresponse.h
include/sqlpool/: sqlpool.h
include/threadpool/: threadpool.h
include/timer/: timer.h
include/webserver/: webserver.h
src/: main.cpp  test.cpp  test_buffer.cpp  test_http.cpp  test_httprequest.cpp  test_log.cpp  test_sqlpool.cpp  test_threadpool.cpp
static/: index.html  picture.html  showpic.html
